manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: springboot
spec:
  selector:
    app: springboot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
